welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    avance(); getCouleurSol();
    if (CouleurSol == Color.green) {
    	return true
    } else{
    	return false
    }
}        
isFacingTrail()
